; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_btrfs_comp_chunk_map.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_btrfs_comp_chunk_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_chunk_map_item = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_chunk_map_item*, %struct.btrfs_chunk_map_item*)* @btrfs_comp_chunk_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btrfs_comp_chunk_map(%struct.btrfs_chunk_map_item* %0, %struct.btrfs_chunk_map_item* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.btrfs_chunk_map_item*, align 8
  %5 = alloca %struct.btrfs_chunk_map_item*, align 8
  store %struct.btrfs_chunk_map_item* %0, %struct.btrfs_chunk_map_item** %4, align 8
  store %struct.btrfs_chunk_map_item* %1, %struct.btrfs_chunk_map_item** %5, align 8
  %6 = load %struct.btrfs_chunk_map_item*, %struct.btrfs_chunk_map_item** %4, align 8
  %7 = getelementptr inbounds %struct.btrfs_chunk_map_item, %struct.btrfs_chunk_map_item* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.btrfs_chunk_map_item*, %struct.btrfs_chunk_map_item** %5, align 8
  %10 = getelementptr inbounds %struct.btrfs_chunk_map_item, %struct.btrfs_chunk_map_item* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load %struct.btrfs_chunk_map_item*, %struct.btrfs_chunk_map_item** %4, align 8
  %16 = getelementptr inbounds %struct.btrfs_chunk_map_item, %struct.btrfs_chunk_map_item* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.btrfs_chunk_map_item*, %struct.btrfs_chunk_map_item** %5, align 8
  %19 = getelementptr inbounds %struct.btrfs_chunk_map_item, %struct.btrfs_chunk_map_item* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp slt i64 %17, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 -1, i32* %3, align 4
  br label %24

23:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22, %13
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
